# FAQs-RAG-API

./: .env.example  .gitignore  Dockerfile  README.md  architecture_reports_es.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: faq.py  metrics.py  rag.py
app/core/: config.py  i18n.py  lifespan.py
app/data/: developer_knowledge.txt  enterprise_qa.txt  faq_document.txt  history_metrics.json  tech_support_manual.txt
app/schemas/: faq.py  metrics.py  rag.py
app/scripts/: build_index.py  query_cli.py
app/services/: context_engineering.py  evaluator.py  graph_workflow.py  history_service.py  indexer.py  rag_engine.py  safety_service.py  vertex_service.py
chroma_data/: chroma.sqlite3
outputs/: sample_queries.json
