[project]
name = "faqs-rag-api"
version = "0.1.0"
description = "A FastAPI-based RAG API for FAQs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic[email]>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.1",
    "langchain>=0.1.12",
    "langchain-google-vertexai>=1.0.1",
    "langchain-google-genai>=1.0.1",
    "langchain-openai>=0.1.0",
    "langgraph>=0.0.30",
    "langchain-chroma>=0.1.1",
    "langchain-community>=0.0.28",
    "chromadb>=0.4.24",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
strict = true
